# StampDude

./: README.md
.github/workflows/: ci_jazzy.yaml
stamp_dude_bringup/: CMakeLists.txt  package.xml
stamp_dude_bringup/launch/: stamp_dude.launch.py
stamp_dude_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
stamp_dude_node/include/: stamp_dude_node.hpp
stamp_dude_node/include/stamp_dude/: stamp_converter.hpp  twist_to_twist_stamped.hpp
stamp_dude_node/src/: stamp_converter.cpp  stamp_dude_node.cpp  twist_to_twist_stamped.cpp
stamp_dude_node/stamp_dude_node/: stamp_dude.py
stamp_dude_node/test/: test_scenarios.cpp  test_twist_to_twist_stamped.cpp
