<?xml version="1.0"?>
<package format="3">
  <name>stamp_dude_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for the StampDude package.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>stamp_dude</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
</package>
